--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding" id="msg-box4-3" data-bg-video="https://www.youtube.com/embed/rEu75-JOVzU?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="8" style="padding-top: 0rem; padding-bottom: 0rem;">
-    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(255, 255, 255);"></div>
+<section class="mbr-section mbr-section-nopadding" id="msg-box4-3" data-bg-video="https://www.youtube.com/embed/BIIZuzDqsks?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="8" style="padding-top: 0rem; padding-bottom: 0rem;">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(255, 255, 255);"></div>
     <div class="container">
         <div class="row">
             
@@ -95,7 +95,7 @@
                 <div class="lead"><p>Ik tera pyar baqi dunya bekaar.<br>Oh wait, wrong Bohemia.</p></div>
                 <div><a class="btn btn-lg btn-secondary-outline" href="https://mobirise.com">Click here for the correct one</a></div>
             </div>
-            <div class="col-xs-12 col-lg-9 mbr-table-cell-lg image-size" style="width: 47%;">
+            <div class="col-xs-12 col-lg-9 mbr-table-cell-lg image-size" style="width: 29%;">
                 <div class="mbr-figure"><img src="assets/images/ggyktvd-1400x754.png"></div>
             </div>
         </div>
@@ -310,7 +310,7 @@ Fax: +1 (0) 000 0000 002</p>
             </div>
             <div class="col-xs-12 col-md-3"><strong>Links</strong><ul><li><a href="https://mobirise.com/" class="text-info">Website builder</a></li><li><a href="https://mobirise.com/mobirise-free-win.zip" class="text-info">Download for Windows</a></li><li><a href="https://mobirise.com/mobirise-free-mac.zip" class="text-info">Download for Mac</a></li></ul></div>
             <div class="col-xs-12 col-md-6">
-                <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
+                <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
