create github pages

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding" id="msg-box4-3" data-bg-video="https://www.youtube.com/embed/BIIZuzDqsks?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="8" style="padding-top: 0rem; padding-bottom: 0rem;">
-    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(255, 255, 255);"></div>
+<section class="mbr-section mbr-section-nopadding" id="msg-box4-b" data-rv-view="360" style="background-color: rgb(255, 255, 255); padding-top: 3rem; padding-bottom: 0rem;">
+    
     <div class="container">
         <div class="row">
             
@@ -321,7 +321,6 @@ Fax: +1 (0) 000 0000 002</p>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
